# fly_to_learn

./: CMakeLists.txt  Dockerfile  README.md  hello  hello.cpp
.github/workflows/: cr.yml  main.yml
checkpoints/traxxas/2024_05_09_05_08_13_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_16_29_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5  actor_000000000100000.h  actor_000000000100000.h5  actor_000000000200000.h  actor_000000000200000.h5  actor_000000000300000.h  actor_000000000300000.h5
checkpoints/traxxas/2024_05_09_05_41_08_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_42_07_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_44_33_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_47_55_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_49_04_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_55_32_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_58_18_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_58_45_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_05_59_25_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_06_02_41_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
checkpoints/traxxas/2024_05_09_06_04_11_d+o+a+r+h+c+f+w+e+_000/: actor_000000000000000.h  actor_000000000000000.h5
include/fly_to_learn/simulator/: metrics.h  ui.h  (+4 more)
src/: CMakeLists.txt  helpers.h  training.h  training_state.h
src/config/: ablation.h  actor_and_critic.h  config.h  parameters.h  validation.h
src/steps/: checkpoint.h  critic_reset.h  curriculum.h  log_reward.h  logger.h  trajectory_collection.h  validation.h
src/ui/: ui.cpp
src/ui/static/: drone.js
(+45 files in other folders)
